Fix overlap of editor and options
Hides the header and options in full screen mode to prevent overlap over the editor area in full-screen mode.

Another possible alternative is displaying both the options as well as the editor in full-screen mode but purely a user preference. Because the need for save and other options is not as important in full-screen mode.

--- a/administrator/templates/atum/scss/template.scss
+++ b/administrator/templates/atum/scss/template.scss
@@ -115,3 +115,13 @@
 .message-alert {
   text-align: right !important;
 }
+
+// Hide header and options on full screen
+.mce-fullscreen {
+  header {
+    display: none;
+  }
+  #subhead {
+    display: none;
+  }
+}
